@@ -3,6 +3,7 @@
 #include <stdio.h>
 #include <stdlib.h>
 #include <stdint.h>
+#include <string.h>
 #include <inttypes.h>
 #include <float.h>
 #include <time.h>
@@ -10,6 +11,18 @@
 #include <memory.h>
 #include <fcntl.h>
 #include <assert.h>
+
+int32_t SPNATIVE__SPVM__CORE__strerror(SPVM_ENV* env, SPVM_VALUE* stack) {
+  
+  int32_t error_number = stack[0].ival;
+  const char* string_error = strerror(error_number);
+  
+  void* obj_string_error = env->new_str(env, string_error);
+  
+  stack[0].oval = obj_string_error;
+  
+  return SPVM_SUCCESS;
+}
 
 int32_t SPNATIVE__SPVM__CORE__getenv(SPVM_ENV* env, SPVM_VALUE* stack) {
   (void)env;
