@@ -2,6 +2,7 @@
   - add getenv function
   - add SPVM::Errno module
   - Errno tests become more portable
+  - add strerror function
 0.0426 2018-04-15
   - --no-as-needed is not portable. so I remove it again.
   - Create SPVM::Math module and math functions is moved to SPVM::Math.
